# Email-Validator

./: .env.example  .gitattributes  .gitignore  GUIDE.html  PROJECT_LOG.md  README.md  agents.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  vercel.json
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: audit_unknowns.yml  bulk_process.yml  bump_cache_ttl.yml  ci.yml  codeql.yml  db_backup.yml  db_init.yml  delete_job.yml  dependabot_auto_merge.yml  export_cache.yml  flip_typo_domain_rows.yml  keep_warm.yml  keep_warm_b.yml  keep_warm_c.yml  local_triage_unknowns.yml  mark_unknowns_invalid.yml  reconcile_email_cache.yml  report_verdict_reconciliation.yml  retry_unknowns.yml  stale_jobs.yml
api/: index.py
app/: auth.py  config.py  db.py  main.py  models.py  schemas.py  templating.py
app/core/: cache.py  csv_io.py  validator.py
app/data/: disposable.txt
app/providers/: base.py  bouncify.py  hunter.py  local.py  local_rules.py  neverbounce.py  registry.py  (+1 more)
samples/: sample_emails.csv
scripts/: audit_unknowns.py  bump_cache_ttl.py  db_init.py  delete_job.py  export_cache.py  fail_stale_jobs.py  fetch_disposable.py  fetch_tlds.py  flip_typo_domain_rows.py  init_db.py  local_triage_unknowns.py  mark_job_unknowns_invalid.py  pre_push_check.sh  process_job.py  reconcile_email_cache.py  report_verdict_reconciliation.py  retry_unknowns.py
tests/: conftest.py  test_access_control.py  test_bulk_callback_retry.py  test_cache.py  test_queue_cap.py  test_routes.py  test_typo_domains.py  test_user_emails_export.py
(+47 files in other folders)
